--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,11 +1,16 @@
-FROM nvidia/cudagl:11.3.0-devel-ubuntu20.04
+# FROM nvidia/cudagl:11.3.0-devel-ubuntu20.04
+FROM nvidia/cuda:12.8.0-devel-ubuntu22.04
 
 ENV TZ=US/Pacific
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update --fix-missing && \
     apt-get install -y libgtk2.0-dev && \
-    apt-get install -y wget bzip2 ca-certificates curl git vim tmux g++ gcc build-essential cmake checkinstall gfortran libjpeg8-dev libtiff5-dev pkg-config yasm libavcodec-dev libavformat-dev libswscale-dev libdc1394-22-dev libxine2-dev libv4l-dev qt5-default libgtk2.0-dev libtbb-dev libatlas-base-dev libfaac-dev libmp3lame-dev libtheora-dev libvorbis-dev libxvidcore-dev libopencore-amrnb-dev libopencore-amrwb-dev x264 v4l-utils libprotobuf-dev protobuf-compiler libgoogle-glog-dev libgflags-dev libgphoto2-dev libhdf5-dev doxygen libflann-dev libboost-all-dev proj-data libproj-dev libyaml-cpp-dev cmake-curses-gui libzmq3-dev freeglut3-dev
+    apt-get install -y wget bzip2 ca-certificates curl git vim tmux g++ gcc build-essential cmake checkinstall gfortran libjpeg8-dev libtiff5-dev pkg-config yasm libavcodec-dev && \
+    apt-get install -y wget libavformat-dev libswscale-dev libdc1394-dev libxine2-dev libv4l-dev qtbase5-dev qt5-qmake libgtk2.0-dev libtbb-dev libatlas-base-dev libfaac-dev && \
+    apt-get install -y wget libmp3lame-dev libtheora-dev libvorbis-dev libxvidcore-dev libopencore-amrnb-dev libopencore-amrwb-dev x264 v4l-utils libprotobuf-dev protobuf-compiler && \
+    apt-get install -y wget libgoogle-glog-dev libgflags-dev libgphoto2-dev libhdf5-dev doxygen libflann-dev libboost-all-dev proj-data libproj-dev libyaml-cpp-dev cmake-curses-gui && \
+    apt-get install -y wget libzmq3-dev freeglut3-dev
 
 
 RUN cd / && git clone https://github.com/pybind/pybind11 &&\
@@ -29,25 +34,45 @@ RUN cd / && wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-L
     ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d/conda.sh &&\
     echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc &&\
     /bin/bash -c "source ~/.bashrc" && \
-    /opt/conda/bin/conda update -n base -c defaults conda -y &&\
-    /opt/conda/bin/conda create -n my python=3.8
+    /opt/conda/bin/conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/main && \
+    /opt/conda/bin/conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/r && \
+    /opt/conda/bin/conda update -n base -c defaults conda -y && \
+    /opt/conda/bin/conda create -n my python=3.10
 
-
-ENV PATH $PATH:/opt/conda/envs/my/bin
+ENV PATH=$PATH:/opt/conda/envs/my/bin
 
 RUN conda init bash &&\
-    echo "conda activate my" >> ~/.bashrc &&\
-    conda activate my &&\
-    pip install torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1 --index-url https://download.pytorch.org/whl/cu118 &&\
-    pip install "git+https://github.com/facebookresearch/pytorch3d.git@stable" &&\
-    pip install scipy joblib scikit-learn ruamel.yaml trimesh pyyaml opencv-python imageio open3d transformations warp-lang einops kornia pyrender
+    echo "conda activate my" >> ~/.bashrc
+
+RUN conda activate my &&\
+    pip install "setuptools<81" "numpy<2.0"
+
+RUN conda activate my &&\
+    pip install torch==2.1.0+cu121 torchvision==0.16.0+cu121 torchaudio==2.1.0 --index-url https://download.pytorch.org/whl/cu121
+
+RUN conda activate my &&\
+    pip install "git+https://github.com/facebookresearch/pytorch3d.git@stable" --no-build-isolation
+
+RUN conda activate my &&\
+    pip install scipy joblib scikit-learn ruamel.yaml trimesh pyyaml opencv-python imageio open3d transformations warp-lang einops kornia pyrender "cython>=0.29.37" &&\
+    pip install "numpy<2.0" --force-reinstall --no-deps
 
 RUN cd / && git clone --recursive https://github.com/NVIDIAGameWorks/kaolin
+# PyTorch 2.1 does not support CUDA arch 12.0 (Blackwell); restrict to known arches
 RUN conda activate my && cd /kaolin &&\
-    FORCE_CUDA=1 python setup.py develop
+    TORCH_CUDA_ARCH_LIST="6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0" FORCE_CUDA=1 pip install -e . --no-build-isolation
 
 RUN cd / && git clone https://github.com/NVlabs/nvdiffrast &&\
-    conda activate my && cd /nvdiffrast && pip install .
+    conda activate my && cd /nvdiffrast && TORCH_CUDA_ARCH_LIST="6.0;6.1;6.2;7.0;7.5;8.0;8.6;9.0" pip install . --no-build-isolation
+
+# Copy FoundationPose source code and build mycpp
+# Note: Build Docker image from project root: docker build -f docker/dockerfile -t foundationpose .
+# WORKDIR /workspace
+# COPY . /workspace/
+# RUN conda activate my && cd /workspace/mycpp && \
+#     mkdir -p build && cd build && \
+#     cmake .. -DPYTHON_EXECUTABLE=$(which python) && \
+#     make -j$(nproc)
 
 ENV OPENCV_IO_ENABLE_OPENEXR=1
 
@@ -56,5 +81,60 @@ RUN conda activate my &&\
     conda install -y -c anaconda h5py
 
 
+ENV ROS_DISTRO=humble
+# ENV DISPLAY=:0
+# ENV LIBGL_ALWAYS_INDIRECT=0
+# SHELL ["/bin/bash", "-c"]
+# ENV DEBIAN_FRONTEND="noninteractive"
+# ENV TZ="Europe/Paris"
+# LABEL maintainer="clemente.donoso@inria.fr"
+
+RUN apt-get update && apt-get upgrade -yy
+
+###### Install Python Dependencies
+# RUN apt-get install -y \
+#     python-is-python3 \
+#     python3-pip
+
+###### Install ROS2
+RUN apt-get install -y \
+    curl \
+    gnupg2 \
+    lsb-release
+
+RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
+RUN apt-get update && apt-get upgrade -y
+RUN apt install ros-humble-desktop-full -y
+RUN apt install ros-dev-tools -y
+RUN rosdep init && rosdep update
+
+###### Install ROS Dependencies
+RUN apt install -y \
+    ros-${ROS_DISTRO}-cv-bridge \
+    ros-${ROS_DISTRO}-rviz2
+
+###### Set up ROS2 for conda environment (Python 3.10)
+# ROS2 apt packages are built for Python 3.10, which matches our conda environment
+# Add ROS2 Python packages to PYTHONPATH so they can be imported in conda
+RUN echo "source /opt/ros/humble/setup.bash" >> ~/.bashrc && \
+    echo "export LD_LIBRARY_PATH=/opt/ros/humble/lib:\$LD_LIBRARY_PATH" >> ~/.bashrc && \
+    echo "export AMENT_PREFIX_PATH=/opt/ros/humble:\$AMENT_PREFIX_PATH" >> ~/.bashrc && \
+    echo "export ROS_DOMAIN_ID=0" >> ~/.bashrc && \
+    echo "export PYTHONPATH=/opt/ros/humble/lib/python3.10/site-packages:\$PYTHONPATH" >> ~/.bashrc
+
+###### Update Buffer
+RUN sysctl net.ipv4.ipfrag_time=3
+RUN sysctl net.ipv4.ipfrag_high_thresh=134217728
+
+RUN echo "export FASTDDS_BUILTIN_TRANSPORTS=LARGE_DATA?max_msg_size=1MB&soets_size=1MB&non_blocking=true&tcp_negotiation_timeout=50" >> ~/.bashrc
+
+###### Source ROS2 and workspace
+RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash" >> ~/.bashrc
+RUN echo "source /ros2_ws/install/setup.bash" >> ~/.bashrc
+
+
+
+# Setup shell
 ENV SHELL=/bin/bash
 RUN ln -sf /bin/bash /bin/sh
