--- a/docker_v2/dockerfile
+++ b/docker_v2/dockerfile
@@ -103,6 +103,12 @@ RUN echo "export FASTDDS_BUILTIN_TRANSPORTS=LARGE_DATA?max_msg_size=1MB&soets_si
 RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash" >> ~/.bashrc
 RUN echo "[ -f /ros2_ws/install/setup.bash ] && source /ros2_ws/install/setup.bash" >> ~/.bashrc
 
+
+
+## Fix some versions
+RUN pip install ultralytics==8.4
+
+
 # Setup shell
 ENV SHELL=/bin/bash
 RUN ln -sf /bin/bash /bin/sh
